Improve clarity on rate limiting docs wrt. device-side developer mode (#521)

--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -187,23 +187,16 @@ Device.
 
 ![The interface to enable Server-Side Developer mode for a device in the Memfault app](/img/docs/platform/server-side-dev-mode-ui.png)
 
-Server-side Developer Mode is compatible with all Memfault Device SDKs:
+Server-Side Developer Mode is compatible with all Memfault Device SDKs,
+including Linux, Android, and MCU.
 
-- Linux
-- Android
-- MCU
-
-Server-Side Developer Mode is designed to be used in conjunction with the
-accompanying features in the Memfault SDKs:
-
-- [Developer Mode](/docs/linux/reference-memfaultctl-cli/#developer-mode) on
-  Linux
-- [Developer Mode](/docs/android/android-getting-started-guide/#developer-mode-since-bort-420)
-  on Android
-- There is no equivalent feature for MCU Projects.
-
-Developer Mode on Android and Linux is used to enable additional features in the
-Memfault SDKs.
+In addition to Server-Side Developer Mode, Memfault SDKs also offer a Developer
+Mode feature on [Linux](/docs/linux/reference-memfaultctl-cli/#developer-mode)
+and
+[Android](/docs/android/android-getting-started-guide/#developer-mode-since-bort-420).
+This feature enables additional functionalities in the Memfault SDKs. There is
+no equivalent feature for MCU Projects, but Server-Side Developer Mode can
+nevertheless be used stand-alone on MCU Projects.
 
 The number of Devices that can be put in Server-Side Developer Mode
 simultaneously is currently limited.
